src/renderer/styles/List.scss
/*
<AQUA: System-wide parametric audio equalizer interface>
Copyright (C) <2023>  <AQUA Dev Team>

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <https://www.gnu.org/licenses/>.
*/

@import 'color';
@import 'spacing';

.list-wrapper {
  // Apply custom styles for the list wrapper
  background: $primary-dark;
  color: $white;
  border: solid $spacing-xxs $secondary-default;
  border-radius: 4px;
  text-align: start;

  .list {
    // Remove default styles of the ul element
    list-style-type: none;
    padding-inline-start: 0px;
    margin-block-start: 0px;
    margin-block-end: 0px;

    // Apply custom styles
    overflow-y: auto;

    li {
      cursor: pointer;
      padding: $spacing-xs;
      align-content: center;
      font-size: small;

      &.selected {
        background: $primary-light;
      }

      &:focus,
      &:focus-visible,
      &:focus-within {
        background: $secondary-dark;
        outline: none;
      }
    }
  }
}

